servlet semi-implementado

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,9 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+  <servlet>
+  	<servlet-name>IMC</servlet-name>
+  	<servlet-class>/controller</servlet-class>
+  </servlet>
 </web-app>
